--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
+  padding: 1rem 2rem;
 }
 
 .links a {
@@ -39,7 +39,7 @@ button {
   font-size: 0.9rem;
 }
 
-button#signUp {
+button.signUp {
   background-color: var(--main-color);
   color: #fff;
 }
@@ -70,156 +70,265 @@ button#signUp {
   line-height: 1.5rem;
 }
 
-/* Contadores - Segunda seção */
+/* Seção de métricas */
 
-.metricas-container {
-  /* Number */
+.metrics {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 3rem;
+  padding: 0 8rem;
+}
+
+.metric {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  /* Display xl/Semibold */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 60px;
-  line-height: 72px;
-  /* identical to box height, or 120% */
-  letter-spacing: -0.02em;
-  color: #8e2424;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.metricas-container div {
-  width: 280px;
-  height: 72px;
+.metric h1 {
+  color: var(--main-color);
+  font-size: 3rem;
 }
 
-/*Terceira seção*/
-
-.intertitulo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.metric span {
+  color: var(--text-color);
+  line-height: 140%;
+  font-size: 90%;
 }
 
-h3 {
-  height: 28px;
-  width: 280px;
-  left: 0px;
-  top: 12px;
-  border-radius: nullpx;
-
-  /* Text lg/Medium */
-  font-family: 'Inter';
-  font-style: normal;
+.metric .metric-title {
   font-weight: 500;
-  font-size: 18px;
-  line-height: 28px;
-  /* identical to box height, or 156% */
-
-  /* Gray/900 */
   color: #101828;
-
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 0;
 }
 
-/*Quarta parte da terceira seção*/
+/* Seção de talentos */
 
-.paragrafos {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  /*bottom: 36px;*/
-}
-
-.paragrafos p {
-  /* Supporting text */
-  width: 280px;
-  height: 72px;
-  /* Text md/Normal */
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-
-  /* or 150% */
-
-  /* Gray/500 */
-  color: #667085;
-
-  /* Inside auto layout */
-  flex: none;
-  order: 1;
-  align-self: stretch;
-  flex-grow: 0;
-}
-
-/*Quarta seção*/
-
-.vagas-abertas {
-  padding: 7rem 0;
+.talents {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 1rem;
+  padding-top: 8rem;
+  gap: 1rem;
+}
+
+.talents h2 {
+  text-align: center;
+  color: var(--title-color);
+}
+
+.talents span {
+  color: var(--main-color);
+  background: rgba(142, 36, 36, 0.05);
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+}
+
+.talents p {
+  text-align: center;
+  color: var(--text-color);
+}
+
+.talents img {
+  margin-top: 2rem;
+  width: 80%;
+}
+
+ 
+
+/*Quarta parte da terceira seção*/
+
+
+
+/* Seção de vagas abertas */
+
+.vagas-abertas {
+  padding-top: 4rem;
+}
+
+.vagas-abertas span.area-principal {
+  display: block;
+  max-width: 50%;
+  margin: 0 auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-weight: bold;
+  color: var(--title-color);
+}
+
+.vaga {
+  border: 1px solid #EAECF0;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  max-width: 50%;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  color: var(--title-color);
+}
+
+.vaga span.titulo-vaga {
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.vaga .informacoes {
+  margin-top: 1rem;
+  font-size: 90%;
+  color: var(--text-color);
+  display: flex;
   gap: 2rem;
 }
 
-.vagas-abertas span {
+
+/* Seção de depoimentos */
+
+.depoimento {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 80%;
+  margin: 8rem auto;
+  background-color: rgba(195, 25, 25, 0.05);
+  padding: 3rem 2rem;
+}
+
+.depoimento span {
   color: var(--main-color);
-  bottom: 20px;
+  font-weight: 500;
+  text-align: center;
 }
 
-.vagas-abertas h2 {
-  height: 44px;
-  width: 768px;
-  border-radius: nullpx;
-
-  text-align: center;
-
-  /* Display md/Semibold */
-
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 44px;
-  /* identical to box height, or 122% */
-
-  text-align: center;
-  letter-spacing: -0.02em;
+.depoimento img {
+  width: 48px;
 }
 
-.vagas-abertas p {
-  /* Supporting text */
+.depoimento h2 {
+  color: var(--title-color);
+  font-weight: 500;
+  text-align: center;
+  max-width: 70%;
+  margin: 2rem 0;
+}
 
-  width: 768px;
-  height: 30px;
-
-  /* Text xl/Normal */
-
-  font-family: 'Inter';
-  font-style: normal;
+.depoimento span.nome {
+  color: var(--title-color);
+  margin: 0.5rem 0;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 30px;
-  /* identical to box height, or 150% */
+}
 
+.depoimento span.cargo {
+  color: var(--text-color);
+  font-weight: 400;
+}
+
+/* Seção final - formulário de email */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #F9FAFB;
+  padding: 6rem 1rem;
+  gap: 1.5rem;
   text-align: center;
+}
 
-  /* Gray/500 */
+footer h2 {
+  color: var(--title-color);
+}
 
-  color: #667085;
+footer span {
+  color: var(--text-color);
+}
 
+footer form {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer input {
+  outline: none;
+  border: 1px solid #D0D5DD;
+  border-radius: 0.5rem;
+  padding-left: 1rem;
+  width: 12rem;
+  margin-right: 1rem;
+}
+
+/* Responsividade */
+
+@media screen and (max-width: 920px) {
+  .metrics {
+    padding: 0 4rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .metrics {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .metric {
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
+
+  .metric span {
+    max-width: 280px;
+    text-align: center;
+  }
+
+  .about-us p {
+    max-width: 70%;
+  }
+
+  .vaga {
+    max-width: 70%;
+  }
   
+  .vagas-abertas span.area-principal {
+    max-width: 70%;
+  }
+
+  .depoimento h2 {
+    max-width: 100%;
+    font-size: 120%;
+  }
+
+  /* Ajustes de menu aqui */
+
+  .sideMenu {
+    display: initial;
+    visibility: visible;
+  }
+
+  .links {
+    margin: 2rem 0;
+  }
+
+  .links a {
+    margin-right: 0;
+  }
+
+  .menu {
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: -1000px;
+    height: 100vh;
+    background: #F9FAFB;
+    width: 15rem;
+    padding: 2rem;
+    transition: all 2s;
+  }
+
+  .menu .links, .menu .buttons {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
